--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
         <button class="button-studio" type="button">Order Service</button>
       </section>
       <section>
-        <h2 class="ourprinciples-title">Our principles</h2>
+        <h2 class="visually-hidden">Our principles</h2>
         <ul class="card-set">
           <!--Strategy-->
           <li class="straegy">
-            <h3>Strategy</h3>
+            <h3 class="text-strategy">Strategy</h3>
             <p class="straegy-title">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
@@ -57,7 +57,7 @@
           </li>
           <!--Punctuality-->
           <li class="punctuality">
-            <h3>Punctuality</h3>
+            <h3 class="text-strategy">Punctuality</h3>
             <p class="punctuality-title">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
@@ -65,14 +65,14 @@
           </li>
           <!--Diligence-->
           <li class="diligence">
-            <h3>Diligence</h3>
+            <h3 class="text-strategy">Diligence</h3>
             <p class="diligence-title">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li class="technologies">
-            <h3>Technologies</h3>
+            <h3 class="text-strategy">Technologies</h3>
             <p class="technologies-title">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
@@ -117,8 +117,8 @@
                 width="264"
                 height="260"
               />
-              <h3>Mark Guerrero</h3>
-              <p>Product Designer</p>
+              <h3 class="text-foto">Mark Guerrero</h3>
+              <p class="text-pr">Product Designer</p>
             </li>
             <!--Team Card2-->
             <li class="item">
@@ -129,8 +129,8 @@
                 width="264"
                 height="260"
               />
-              <h3>Tom Ford</h3>
-              <p>Frontend Developer</p>
+              <h3 class="text-foto">Tom Ford</h3>
+              <p class="text-pr">Frontend Developer</p>
             </li>
             <!--Team Card3-->
             <li class="item">
@@ -141,8 +141,8 @@
                 width="264"
                 height="260"
               />
-              <h3>Camila Garcia</h3>
-              <p>Marketing</p>
+              <h3 class="text-foto">Camila Garcia</h3>
+              <p class="text-pr">Marketing</p>
             </li>
             <!--Team Card4-->
             <li class="item">
@@ -153,8 +153,8 @@
                 width="264"
                 height="260"
               />
-              <h3>Daniel Wilson</h3>
-              <p>UI Designer</p>
+              <h3 class="text-foto">Daniel Wilson</h3>
+              <p class="text-pr">UI Designer</p>
             </li>
           </ul>
         </div>
