--- a/portfolio.html
+++ b/portfolio.html
@@ -1,106 +1,158 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/styles.css">
-</head>
-<body>
-  <header class="beginning">
-    <nav class="navigation">
-      <a class="webStudio" href="./index.html"><span class="navigation-item">WEB</span>STUDIO</a>
-      <ul class="menu">
-        <li><a class="link" href="./index.html">Studio</a></li>
-        <li><a class="link" href="./portfolio.html">Portfolio</a></li>
-        <li><a class="link" href="/contact">Contact</a></li>
-    </nav>
-    <ul>
-      <li class="mail"><a class="infodevstudio" href="info@devstudio.com">info@devstudio.com</a></li>
-      <li class="mail"><a class="fone" href="+110001111111">+11 (000) 111-11-11</a></li>
-    </ul>
-  </header>
-  <main>
-      <section class="block-button">
-        <button class="button-portfolio" type="button">All</button>
-        <button class="button-portfolio" type="button">Web Site</button>
-        <button class="button-portfolio" type="button">App</button>
-        <button class="button-portfolio" type="button">Design</button>
-        <button class="button-portfolio" type="button">Marketing</button>
-    </section>
-    <section>
-    <h2 class="many-title">Many</h2>
-        <ul class="many">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
+  </head>
+  <body>
+    <header class="beginning">
+      <nav class="navigation">
+        <a class="webStudio" href="./index.html"
+          ><span class="navigation-item">WEB</span>STUDIO</a
+        >
+        <ul class="menu list">
+          <li><a class="link" href="./index.html">Studio</a></li>
+          <li><a class="link" href="./portfolio.html">Portfolio</a></li>
+          <li><a class="link" href="/contact">Contact</a></li>
+        </ul>
+      </nav>
+      <ul class="list">
+        <li class="mail">
+          <a class="infodevstudio" href="info@devstudio.com"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li class="mail">
+          <a class="fone" href="+110001111111">+11 (000) 111-11-11</a>
+        </li>
+      </ul>
+    </header>
+    <main class="main-portfolio">
+      <div class="conteyner">
+        <ul class="list main">
+          <div class="button-item">
+            <li class="block-button">
+              <button class="button-portfolio" type="button">All</button>
+            </li>
+            <li class="block-button">
+              <button class="button-portfolio" type="button">Web Site</button>
+            </li>
+            <li class="block-button">
+              <button class="button-portfolio" type="button">App</button>
+            </li>
+            <li class="block-button">
+              <button class="button-portfolio" type="button">Design</button>
+            </li>
+            <li class="block-button">
+              <button class="button-portfolio" type="button">Marketing</button>
+            </li>
+          </div>
+          <h2 class="visually-hidden">Many</h2>
+
           <li class="foto-text-title">
-            <img src="./images/img(8).jpg" alt="Banking App Interface Concept" />
-            <h3>Banking App Interface Concept</h3>
-            <p>App</p>
+            <img
+              class="foto-portfolio"
+              src="./images/img(8).jpg"
+              alt="Banking App Interface Concept"
+            />
+            <h3 class="text-foto-port">Banking App Interface Concept</h3>
+            <p class="text-port">App</p>
           </li>
           <li class="fototext-title">
-            <p class="text-title">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+            <p class="text-title">
+              14 Stylish and User-Friendly App Design Concepts · Task Manager
+              App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
+              Storage App
+            </p>
             <h3 class="cashless-payment">Cashless Payment</h3>
-            <p class="">Marketing</p>
+            <p class="text-port">Marketing</p>
           </li>
           <li class="foto-text-title">
-            <img src="./images/img(10).jpg" alt="Meditaion App" />
-            <h3>Meditaion App</h3>
-            <p>App</p>
+            <img
+              class="foto-portfolio"
+              src="./images/img(10).jpg"
+              alt="Meditaion App"
+            />
+            <h3 class="text-foto-port">Meditaion App</h3>
+            <p class="text-port">App</p>
+          </li>
+          <h2 class="visually-hidden">Marketing and Design</h2>
+          <li class="foto-text-title">
+            <img
+              class="foto-portfolio"
+              src="./images/img(11).jpg"
+              alt="Taxi Service"
+            />
+            <h3 class="text-foto-port">Taxi Service</h3>
+            <p class="text-port">Marketing</p>
+          </li>
+          <li class="foto-text-title">
+            <img
+              class="foto-portfolio"
+              src="./images/img(12).jpg"
+              alt="Screen Illustrations"
+            />
+            <h3>Screen Illustrations</h3>
+            <p class="text-port">Design</p>
+          </li>
+          <li class="foto-text-title">
+            <img
+              class="foto-portfolio"
+              src="./images/img(13).jpg"
+              alt="Online Courses"
+            />
+            <h3 class="text-foto-port">Online Courses</h3>
+            <p class="text-port">Marketing</p>
+          </li>
+
+          <h2 class="visually-hidden">Web Site</h2>
+          <li class="foto-text-title">
+            <img
+              class="foto-portfolio"
+              src="./images/img(14).jpg"
+              alt="Instagram Stories Concept"
+            />
+            <h3 class="text-foto-port">Instagram Stories Concept</h3>
+            <p class="text-port">Design</p>
+          </li>
+          <li class="foto-text-title">
+            <img
+              class="foto-portfolio"
+              src="./images/img(15).jpg"
+              alt="Organic Food"
+            />
+            <h3 class="text-foto-port">Organic Food</h3>
+            <p class="text-port">Web Site</p>
+          </li>
+          <li class="foto-text-title">
+            <img
+              class="foto-portfolio"
+              src="./images/img(16).jpg"
+              alt="Fresh Coffee"
+            />
+            <h3 class="text-foto-port">Fresh Coffee</h3>
+            <p class="text-port">Web Site</p>
           </li>
         </ul>
-    </section>
-    <section>
-        <h2 class="marketing-title">Marketing and Design</h2>
-        <ul class="marketing">
-            <li class="foto-text-title">
-              <img src="./images/img(11).jpg" alt="Taxi Service" />
-              <h3>Taxi Service</h3>
-              <p>Marketing</p>
-            </li>
-            <li class="foto-text-title">
-              <img src="./images/img(12).jpg" alt="Screen Illustrations" />
-              <h3>Screen Illustrations</h3>
-              <p>Design</p>
-            </li>
-            <li class="foto-text-title">
-              <img src="./images/img(13).jpg" alt="Online Courses" />
-              <h3>Online Courses</h3>
-              <p>Marketing</p>
-            </li>
-        </ul>
-
-    </section>
-    <section>
-        <h2 class="web-title">Web Site</h2>
-        <ul class="web-site">
-            <li class="foto-text-title">
-              <img src="./images/img(14).jpg" alt="Instagram Stories Concept" />
-              <h3>Instagram Stories Concept</h3>
-              <p>Design</p>
-            </li>
-            <li class="foto-text-title">
-              <img src="./images/img(15).jpg" alt="Organic Food" />
-              <h3>Organic Food</h3>
-              <p>Web Site</p>
-            </li>
-            <li class="foto-text-title">
-              <img src="./images/img(16).jpg" alt="Fresh Coffee" />
-              <h3>Fresh Coffee</h3>
-              <p>Web Site</p>
-            </li>
-        </ul>
-    </section>
-  </main>
-        <footer class="lowerpart">
-          <a class="lowerpart-block" href="./index.html"><span class="lowerpart-item">WEB</span>STUDIO</a>
-          <p class="lowerpart-title">
-            Increase the flow of customers and sales for your business with digital
-            marketing & growth solutions.
-          </p>
-        </footer>    
-</body>
-
+      </div>
+    </main>
+    <footer class="lowerpart">
+      <a class="lowerpart-block" href="./index.html"
+        ><span class="lowerpart-item">WEB</span>STUDIO</a
+      >
+      <p class="lowerpart-title">
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
+    </footer>
+  </body>
 </html>
