update portfolio html

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       </section>
       <section class="our-team">
         <h2 class="our-team-title">Our Team</h2>
-        <div class="conteyner">
+        <div class="container">
           <ul class="card-set">
             <!--Team Card1-->
             <li class="item">
