--- a/portfolio.html
+++ b/portfolio.html
@@ -37,9 +37,9 @@
       </ul>
     </header>
     <main class="main-portfolio">
-      <div class="conteyner">
-        <ul class="list main">
-          <div class="button-item">
+      <section>
+        <div class="conteyner">
+          <ul class="list main">
             <li class="block-button">
               <button class="button-portfolio" type="button">All</button>
             </li>
@@ -55,111 +55,110 @@
             <li class="block-button">
               <button class="button-portfolio" type="button">Marketing</button>
             </li>
-          </div>
-          <h2 class="visually-hidden">Many</h2>
+            <li class="block-button"></li>
+          </ul>
 
-          <li class="foto-text-title">
-            <img
-              class="foto-portfolio"
-              src="./images/img(8).jpg"
-              alt="Banking App Interface Concept"
-              width="360"
-              height="300"        
-            />
-            <h3 class="text-foto-port">Banking App Interface Concept</h3>
-            <p class="text-port">App</p>
-          </li>
-          <li class="fototext-title">
-            <p class="text-title">
-              14 Stylish and User-Friendly App Design Concepts · Task Manager
-              App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-              Storage App
-            </p>
-            <h3 class="cashless-payment">Cashless Payment</h3>
-            <p class="text-port">Marketing</p>
-          </li>
-          <li class="foto-text-title">
-            <img
-              class="foto-portfolio"
-              src="./images/img(10).jpg"
-              alt="Meditaion App"
-              width="360"
-              height="300"              
-            />
-            <h3 class="text-foto-port">Meditaion App</h3>
-            <p class="text-port">App</p>
-          </li>
-          <h2 class="visually-hidden">Marketing and Design</h2>
-          <li class="foto-text-title">
-            <img
-              class="foto-portfolio"
-              src="./images/img(11).jpg"
-              alt="Taxi Service"
-              width="360"
-              height="300"              
-            />
-            <h3 class="text-foto-port">Taxi Service</h3>
-            <p class="text-port">Marketing</p>
-          </li>
-          <li class="foto-text-title">
-            <img
-              class="foto-portfolio"
-              src="./images/img(12).jpg"
-              alt="Screen Illustrations"
-              width="360"
-              height="300"
-            />
-            <h3>Screen Illustrations</h3>
-            <p class="text-port">Design</p>
-          </li>
-          <li class="foto-text-title">
-            <img
-              class="foto-portfolio"
-              src="./images/img(13).jpg"
-              alt="Online Courses"
-              width="360"
-              height="300"              
-            />
-            <h3 class="text-foto-port">Online Courses</h3>
-            <p class="text-port">Marketing</p>
-          </li>
-
-          <h2 class="visually-hidden">Web Site</h2>
-          <li class="foto-text-title">
-            <img
-              class="foto-portfolio"
-              src="./images/img(14).jpg"
-              alt="Instagram Stories Concept"
-              width="360"
-              height="300"            
+          <ul>
+            <li class="foto-text-title">
+              <img
+                class="foto-portfolio"
+                src="./images/img(8).jpg"
+                alt="Banking App Interface Concept"
+                width="360"
+                height="300"
               />
-            <h3 class="text-foto-port">Instagram Stories Concept</h3>
-            <p class="text-port">Design</p>
-          </li>
-          <li class="foto-text-title">
-            <img
-              class="foto-portfolio"
-              src="./images/img(15).jpg"
-              alt="Organic Food"
-              width="360"
-              height="300"
-            />
-            <h3 class="text-foto-port">Organic Food</h3>
-            <p class="text-port">Web Site</p>
-          </li>
-          <li class="foto-text-title">
-            <img
-              class="foto-portfolio"
-              src="./images/img(16).jpg"
-              alt="Fresh Coffee"
-              width="360"
-              height="300"
-            />
-            <h3 class="text-foto-port">Fresh Coffee</h3>
-            <p class="text-port">Web Site</p>
-          </li>
-        </ul>
-      </div>
+              <h3 class="text-foto-port">Banking App Interface Concept</h3>
+              <p class="text-port">App</p>
+            </li>
+            <li class="fototext-title">
+              <p class="text-title">
+                14 Stylish and User-Friendly App Design Concepts · Task Manager
+                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
+                Storage App
+              </p>
+              <h3 class="cashless-payment">Cashless Payment</h3>
+              <p class="text-port">Marketing</p>
+            </li>
+            <li class="foto-text-title">
+              <img
+                class="foto-portfolio"
+                src="./images/img(10).jpg"
+                alt="Meditaion App"
+                width="360"
+                height="300"
+              />
+              <h3 class="text-foto-port">Meditaion App</h3>
+              <p class="text-port">App</p>
+            </li>
+            <li class="foto-text-title">
+              <img
+                class="foto-portfolio"
+                src="./images/img(11).jpg"
+                alt="Taxi Service"
+                width="360"
+                height="300"
+              />
+              <h3 class="text-foto-port">Taxi Service</h3>
+              <p class="text-port">Marketing</p>
+            </li>
+            <li class="foto-text-title">
+              <img
+                class="foto-portfolio"
+                src="./images/img(12).jpg"
+                alt="Screen Illustrations"
+                width="360"
+                height="300"
+              />
+              <h3 class="text-foto-port">Screen Illustrations</h3>
+              <p class="text-port">Design</p>
+            </li>
+            <li class="foto-text-title">
+              <img
+                class="foto-portfolio"
+                src="./images/img(13).jpg"
+                alt="Online Courses"
+                width="360"
+                height="300"
+              />
+              <h3 class="text-foto-port">Online Courses</h3>
+              <p class="text-port">Marketing</p>
+            </li>
+            <li class="foto-text-title">
+              <img
+                class="foto-portfolio"
+                src="./images/img(14).jpg"
+                alt="Instagram Stories Concept"
+                width="360"
+                height="300"
+              />
+              <h3 class="text-foto-port">Instagram Stories Concept</h3>
+              <p class="text-port">Design</p>
+            </li>
+            <li class="foto-text-title">
+              <img
+                class="foto-portfolio"
+                src="./images/img(15).jpg"
+                alt="Organic Food"
+                width="360"
+                height="300"
+              />
+              <h3 class="text-foto-port">Organic Food</h3>
+              <p class="text-port">Web Site</p>
+            </li>
+            <li class="foto-text-title">
+              <img
+                class="foto-portfolio"
+                src="./images/img(16).jpg"
+                alt="Fresh Coffee"
+                width="360"
+                height="300"
+              />
+              <h3 class="text-foto-port">Fresh Coffee</h3>
+              <p class="text-port">Web Site</p>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
     <footer class="lowerpart">
       <a class="lowerpart-block" href="./index.html"
