update portfolio html

--- a/portfolio.html
+++ b/portfolio.html
@@ -66,17 +66,19 @@
                 alt="Banking App Interface Concept"
                 width="360"
                 height="300"
-              />
+              >
               <h3 class="text-foto-port">Banking App Interface Concept</h3>
               <p class="text-port">App</p>
             </li>
-            <li class="fototext-title">
-              <p class="text-title">
-                14 Stylish and User-Friendly App Design Concepts · Task Manager
-                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-                Storage App
-              </p>
-              <h3 class="cashless-payment">Cashless Payment</h3>
+            <li class="foto-text-title">
+              <img
+                class="foto-portfolio"
+                src="./images/img(17).jpg"
+                alt=""
+                width="360"
+                height="300"
+              >
+              <h3 class="text-foto-port">Cashless Payment</h3>
               <p class="text-port">Marketing</p>
             </li>
             <li class="foto-text-title">
@@ -86,7 +88,7 @@
                 alt="Meditaion App"
                 width="360"
                 height="300"
-              />
+              >
               <h3 class="text-foto-port">Meditaion App</h3>
               <p class="text-port">App</p>
             </li>
@@ -97,7 +99,7 @@
                 alt="Taxi Service"
                 width="360"
                 height="300"
-              />
+              >
               <h3 class="text-foto-port">Taxi Service</h3>
               <p class="text-port">Marketing</p>
             </li>
@@ -108,7 +110,7 @@
                 alt="Screen Illustrations"
                 width="360"
                 height="300"
-              />
+              >
               <h3 class="text-foto-port">Screen Illustrations</h3>
               <p class="text-port">Design</p>
             </li>
@@ -119,7 +121,7 @@
                 alt="Online Courses"
                 width="360"
                 height="300"
-              />
+              >
               <h3 class="text-foto-port">Online Courses</h3>
               <p class="text-port">Marketing</p>
             </li>
@@ -130,7 +132,7 @@
                 alt="Instagram Stories Concept"
                 width="360"
                 height="300"
-              />
+              >
               <h3 class="text-foto-port">Instagram Stories Concept</h3>
               <p class="text-port">Design</p>
             </li>
@@ -141,7 +143,7 @@
                 alt="Organic Food"
                 width="360"
                 height="300"
-              />
+              >
               <h3 class="text-foto-port">Organic Food</h3>
               <p class="text-port">Web Site</p>
             </li>
@@ -152,7 +154,7 @@
                 alt="Fresh Coffee"
                 width="360"
                 height="300"
-              />
+              >
               <h3 class="text-foto-port">Fresh Coffee</h3>
               <p class="text-port">Web Site</p>
             </li>
